--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="bg-gray-200 h-screen">
-  <router-outlet></router-outlet>
+<div class="bg-gray-200 h-screen" [ngClass]="{'grid gap-4 p-4 grid-cols-[220px,_1fr]' : authService.currentUser}">
+  <app-sidebar [classList]="!authService.isLogged ? 'hidden' : ''"></app-sidebar>
+  <app-main [classList]="!authService.isLogged ? '' : 'm-4 p-4 bg-white rounded-lg'"></app-main>
 </div>
